fix on mobile article

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -558,6 +558,21 @@
 		overflow: visible;
 	}
 }
+@media only screen and (max-width: 1025px) {
+	.objects,
+	.company,
+	.reputation {
+		margin-top: 10vh;
+	}
+	.video__container {
+		/*width: 100%;*/
+	}
+	.video__wrap {
+		padding-bottom: 56.25%; /* 16:9 */
+		padding-top: 25px;
+		height: 0;
+	}
+}
 @media only screen and (max-width: 800px) {
 	/*----- Objects -----*/
 		/*----- Slider -----*/
@@ -565,7 +580,6 @@
 		left: 0;
 		top: 45%;
 	}
-
 		/*----- /Slider -----*/
 
 	/*----- /Objects -----*/
@@ -606,7 +620,7 @@
 	}
 	
 }
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 600px) {
 	/*----- Reputation -----*/
 	.reputationLogo__wrap {
 		width: 40%;
@@ -614,6 +628,21 @@
 	}
 	/*----- /Reputation -----*/
 	
+}
+@media only screen and (max-width: 670px) {
+	.slideArt__head,
+	.main__txt_slide,
+	.slideImg__wrap {
+		padding-left: 5%;
+		width: 70%;
+	}
+}
+@media only screen and (max-width: 481px) {
+	.slideArt__head,
+	.main__txt_slide,
+	.slideImg__wrap {
+		width: 65%;
+	}
 }
 @media only screen and (max-width: 650px) {
 	.slideHead {
